feature share + BG

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
           <option value="214800000">1TB – 214.800.000đ</option>
           <option value="294000000">2TB – 294.000.000đ</option>
         </select>
+
+        <label for="handover1">Đã bàn giao:</label>
+        <input type="checkbox" class="handover" id="handover1" />
+
+        <label for="coworker1">Ký chung đồng nghiệp:</label>
+        <input type="checkbox" class="coworker" id="coworker1" />
       </div>
     </div>
 
